--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FavouritePlaces">
+        <activity android:name=".AddFavPlaceActivity"
+            android:screenOrientation="portrait"
+            android:label="Add Favourite Place"
+            android:theme="@style/CustomNoActionBarTheme">
+
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
