--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FavouritePlaces">
-        <activity android:name=".AddFavPlaceActivity"
+        <activity android:name=".AddFavPlaceFragment"
             android:screenOrientation="portrait"
             android:label="Add Favourite Place"
             android:theme="@style/CustomNoActionBarTheme">
