--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 //    implementation 'com.google.android.material:material:1.0.0-beta01'
     implementation 'com.karumi:dexter:6.0.1'
+    debugImplementation 'im.dino:dbinspector:3.4.1@aar'
 
     implementation 'android.arch.persistence.room:runtime:2.2.5'
     kapt 'android.arch.persistence.room:compiler:2.2.5'
