--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -56,5 +57,9 @@ dependencies {
     implementation 'android.arch.persistence.room:runtime:2.2.5'
     kapt 'android.arch.persistence.room:compiler:2.2.5'
     implementation 'com.google.android.libraries.places:places:2.1.0'
+
+    implementation platform('com.google.firebase:firebase-bom:27.1.0')
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
 }
