--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FavouritePlaces">
 
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -30,13 +34,13 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="${MAPS_API_KEY}" />
 
-        <activity
-            android:name=".AddFavPlaceFragment"
-            android:label="Add Favourite Place"
-            android:screenOrientation="portrait"
-            android:theme="@style/CustomNoActionBarTheme"></activity>
+<!--        <activity-->
+<!--            android:name=".AddFavPlaceFragment"-->
+<!--            android:label="Add Favourite Place"-->
+<!--            android:screenOrientation="portrait"-->
+<!--            android:theme="@style/CustomNoActionBarTheme"></activity>-->
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
